# ros2_ws

./: .gitignore  Localization after mapping  README.md  bashrc  command for rtab map  frames_2025-12-09_17.19.26.gv  frames_2025-12-16_16.00.05.gv  frames_2025-12-16_18.43.34.gv  frames_2025-12-17_17.16.34.gv  frames_2025-12-17_17.18.05.gv  rtabmap.pgm  rtabmap.yaml  set_git_identity.sh  static manual bride to run rtabmap
install/: local_setup.sh  setup.sh
install/warehouse_sim/share/warehouse_sim/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/mqtt_bridge/: package.xml  setup.py
src/mqtt_bridge/mqtt_bridge/: mqtt_node.py
src/multirobot_launch/: package.xml  setup.cfg  setup.py
src/multirobot_launch/config/: amcl_common.yaml
src/multirobot_launch/launch/: husky_slam2d_clone.launch.py  nav2_two_robots_navigation.launch.py  two_clearpath_robots.launch.py
src/nav2_rtab_bringup/: CMakeLists.txt  package.xml
src/nav2_rtab_bringup/behavior_trees/: nav2_minimal_bt.xml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
src/nav2_rtab_bringup/config/: nav2_params.yaml
src/nav2_rtab_bringup/launch/: nav2_with_rtabmap.launch.py
warehouse_sim/: CMakeLists.txt  lidar command to map points in rviz
warehouse_sim/config/: slam_toolbox.yaml
warehouse_sim/launch/: lidar3d_tf.launch.py  lidar_slam.launch.py  warehouse_gz.launch.py
warehouse_sim/models/diff_robot/: model.sdf  model2.sdf
warehouse_sim/worlds/: warehouse_world.sdf
(+7 files in other folders)
