<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_rtab_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="krishaka@todo.todo">krishaka</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_costmap_2d</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
